# Rusty-JavaC

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: build.yml
crates/javac-ast/src/: ast.rs  lib.rs
crates/javac-bytecode/src/: class_gen.rs  codegen.rs  expr_gen.rs  lambda.rs  lib.rs  local_var.rs  method_gen.rs  stmt_gen.rs  validation.rs
crates/javac-bytecode/src/expr_gen/: arrays.rs  assign.rs  calls.rs  switch.rs  types.rs  values.rs
crates/javac-call-resolver/src/: catalog.rs  java_io.rs  java_lang.rs  java_util.rs  javax.rs  lib.rs  system.rs
crates/javac-call-resolver/src/calls/: java_io.rs  java_lang.rs  mod.rs  system.rs
crates/javac-call-resolver/src/platform/: java_io.rs  java_lang.rs  java_util.rs  java_util_function.rs  mod.rs
crates/javac-classfile/src/: access_flags.rs  constant_pool.rs  lib.rs  reader.rs  version.rs  writer.rs
crates/javac-compiler/: Cargo.toml
crates/javac-compiler/src/: classpath.rs  compiler.rs  config.rs  incremental.rs  lib.rs  pipeline.rs
crates/javac-compiler/src/classpath/: source.rs
crates/javac-diagnostics/src/: lib.rs
crates/javac-hir/src/: body.rs  hir.rs  item.rs  lib.rs  lowering.rs  name_resolver.rs
crates/javac-hir/src/lowering/: error.rs  expr.rs  member.rs  signature.rs  stmt.rs  syntax.rs  types.rs  unit.rs
crates/javac-lexer/src/: lib.rs  token.rs
crates/javac-parser/src/: lib.rs  syntax_error.rs
crates/javac-parser/src/parser/: expr.rs  member.rs  mod.rs  stmt.rs  top_level.rs  ty.rs  type_decl.rs
crates/javac-ty/src/: descriptor.rs  erasure.rs  lib.rs  ty.rs
examples/compiler-example/src/: main.rs
gradle-plugin/: build.gradle.kts  settings.gradle.kts
gradle-plugin/src/main/kotlin/com/rustyjavac/gradle/: CompileRustyJavaCTask.kt  RustyJavaCExtension.kt  RustyJavaCPlugin.kt
gradle/demo/: build.gradle.kts  settings.gradle.kts
gradle/demo/src/main/java/com/example/: BasicTypes.java  ControlFlow.java
src/: lib.rs
src/bytecode/: codegen.rs
src/bytecode/expr_gen/: assign.rs
tests/java/: AssignmentExpressions.java  GenericSignatureCase.java  GuessNumberGame.java  LambdaConsumerTest.java  LambdaTest.java  ModernJavaFeatures.java  ScopedPatternFlow.java  SwitchExpressionCases.java
