[workspace]
members = [
    "crates/javac-ast",
    "crates/javac-lexer",
    "crates/javac-parser",
    "crates/javac-hir",
    "crates/javac-ty",
    "crates/javac-bytecode",
    "crates/javac-classfile",
    "crates/javac-diagnostics",
    "crates/javac-compiler",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Eatgrapes/Rusty-JavaC"
keywords = ["java","recode","Compiler","ByteCode"]
categories = ["compilers"]
authors = ["Eatgrapes"]
rust-version = "1.85"

[workspace.dependencies]
thiserror = "2.0"
text-size = "1.1"
rowan = "0.16"
logos = "0.16"
rust-asm = { version = "0.2", features = ["macros"] }