[package]
name = "javac-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
javac-ast = { path = "../javac-ast" }
javac-lexer = { path = "../javac-lexer" }
javac-parser = { path = "../javac-parser" }
javac-hir = { path = "../javac-hir" }
javac-ty = { path = "../javac-ty" }
javac-bytecode = { path = "../javac-bytecode" }
javac-classfile = { path = "../javac-classfile" }
javac-call-resolver = { path = "../javac-call-resolver" }
javac-diagnostics = { path = "../javac-diagnostics" }
rust-asm = { workspace = true }
text-size = { workspace = true }
ustr = "1.1.0"
zip = { version = "2", default-features = false, features = ["deflate"] }
